fixed text wrapping

--- a/_dev/scss/_content.scss
+++ b/_dev/scss/_content.scss
@@ -10,6 +10,7 @@ article{
     display:table;
     margin: auto;
     background: $gray;
+    background: $white;
     box-shadow: inset 0px 0px 25px 0px rgba(0,0,0,0.5);
     div.hero-content{
       vertical-align: middle;
